committing the pom changes- 1. updated the surefire plugin 2. added maven-failsafe-plugin