@@ -35,15 +35,29 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
           <configuration>
-             <source>1.8</source>
-             <target>1.8</target>
+             <release>11</release>
            </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.pluglins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.20.1</version>
+        <version>2.22.0</version>
+         <configuration>
+        <argLine>
+            --illegal-access=permit
+        </argLine>
+    </configuration>
         </plugin>
+        <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-failsafe-plugin</artifactId>
+    <version>2.22.0</version>
+    <configuration>
+        <argLine>
+            --illegal-access=permit
+        </argLine>
+    </configuration>
+</plugin>
     </plugins>
   </build>
 </project>
